--- a/form/index.html
+++ b/form/index.html
@@ -6,7 +6,20 @@
 </head>
 <body>
   <form>
-    <input type="text" placeholder="Shop Key" />
+    <input type="text" name="key" placeholder="Shop Key" />
+    <input type="number" name="lat" placeholder="lat" />
+    <input type="number" name="lng" placeholder="lng" />
+    <input type="text" name="email" placeholder="email" />
+    <input type="text" name="tel" placeholder="tel" />
+    <input type="checkbox" name="permanent_closed" />
+    <input type="text" name="transfer_to" placeholder="transfer to" />
+    <input type="text" name="web" placeholder="web" />
+    <input type="text" name="ec" placeholder="ec" />
+    <input type="text" name="facebook" placeholder="facebook" />
+    <input type="text" name="twitter" placeholder="twitter" />
+    <input type="text" name="instagram" placeholder="instagram" />
+    <input type="text" name="instagram_tag" placeholder="instagram_tag" />
+    <input type="text" name="google_maps" placeholder="google_maps" />
   </form>
 </body>
 </html>
