--- a/form/index.html
+++ b/form/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <form>
+    <!-- shops -->
     <input type="text" name="key" placeholder="Shop Key" />
     <input type="number" name="lat" placeholder="lat" />
     <input type="number" name="lng" placeholder="lng" />
@@ -20,6 +21,13 @@
     <input type="text" name="instagram" placeholder="instagram" />
     <input type="text" name="instagram_tag" placeholder="instagram_tag" />
     <input type="text" name="google_maps" placeholder="google_maps" />
+    <!-- shop attributes -->
+    <input type="text" name="enName" placeholder="en: name" />
+    <input type="text" name="jaName" placeholder="ja: 名前" />
+    <input type="text" name="enName" placeholder="en: address" />
+    <input type="text" name="jaName" placeholder="ja: 住所" />
+    <input type="text" name="enName" placeholder="en: hours note" />
+    <input type="text" name="jaName" placeholder="ja: 営業時間についてのメモ" />
   </form>
 </body>
 </html>
