--- a/form/index.html
+++ b/form/index.html
@@ -3,6 +3,9 @@
 <head>
   <script src="./index.js" defer></script>
   <link rel="stylesheet" type="text/css" href="./index.css">
+  <meta charset="utf-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=5, minimum-scale=1, user-scalable=yes, viewport-fit=cover" />
 </head>
 <body>
   <form>
