--- a/cms/src/index.html
+++ b/cms/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>COFFEE HANDBOOK shop registoration form</title>
     <link inline rel="stylesheet" href="index.css" />
-    <base target="_top">
+    <base target="_top" />
   </head>
   <body>
     <div class="app"></div>
